# GD-Ghost-Bot-Mod

./: CMakeLists.txt  mod.json
.agents/memory/: MEMORY.md  project-layout.md  startup-guard-lifecycle.md
.github/workflows/: build.yml
GD-Ghost-Bot-Mod/src/: main.cpp
src/: GhostAccess.hpp  GhostDebug.hpp  GhostPauseLayer.cpp  GhostPlayLayer.cpp  GhostPopups.hpp  GhostTypes-1.hpp  GhostTypes.hpp  GhostUpdateHook.cpp  PauseMenu.cpp  main (1).cpp  main-10.cpp  main-11.cpp  main-18.cpp  main-27.cpp  main-4.cpp  main-5.cpp  main-6.cpp  main-7.cpp  main-9.cpp  main.cpp
